# traductorar

./: README.md  pyproject.toml
tests/: test_traductorar.py
traductorar/: __main__.py  main.py
traductorar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
