[tool.poetry]
name = "traductorar"
version = "0.0.1"
description = "Traductor de palabra"
authors = ["Adrian Rios <fernandoadrianr1990@gmail.com>"]
keywords = ["traductor"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/afrios3/package_name"
repository = "https://github.com/afrios3/package_name"
include = [
    "LICENSE",
    ]


[tool.poetry.scripts]
traductorar="traductorar.__main__:main"


[tool.poetry.dependencies]
python = "^3.8"
translate = "3.5.0"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
twine = "^3.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
